text edit padding

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -81,7 +81,7 @@
     <!-- <section id="section2"> -->
       <!-- <div class="text-center">
         <h1 class="section-heading">Our Clients</h1>
-        <p class="section-sub-heading pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p class="section-sub-heading pb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       </div>  -->
 
   <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -116,7 +116,7 @@
     <section id="section3">
       <div class="text-center">
             <h1 class="section-heading">What We Promise</h1>
-            <p class="section-sub-heading">Feel the relief when you know your customers and their <br> medications are taken care of</p>
+            <p class="section-sub-heading section-sub-heading-only">Feel the relief when you know your customers and their medications are taken care of</p>
       </div>     
    
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">                    
@@ -163,7 +163,7 @@
 
       <div class="text-center">
         <h1 class="section-heading">What We Promise</h1>
-        <p class="section-sub-heading">Feel the relief when you know your customers and their <br> medications are taken care of</p>
+        <p class="section-sub-heading section-sub-heading-only">Feel the relief when you know your customers and their medications are taken care of</p>
   </div> 
 
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -202,7 +202,7 @@
           <section id="section4">
             <div class="text-center">
               <h1 class="section-heading">WE BELIEVE IN</h1>
-              <p class="section-sub-heading">We are committed to handling your pharmacy delivery needs with true<br> professionalism and with the care your patients deserve</p>
+              <p class="section-sub-heading section-sub-heading-only">We are committed to handling your pharmacy delivery needs with true professionalism and with the care your patients deserve</p>
             </div> 
             <div class="py-4 text-center" >
               <div class="container">
@@ -246,7 +246,7 @@
           <section id="section5">
             <div class="text-center">
               <h1 class="section-heading">WHAT OUR CLIENTS SAY?</h1>
-              <p id="sec5-main-sub" class="section-sub-heading">You can trust that we've done our homework and can<br> handle your same day delivery needs.</p>
+              <p id="sec5-main-sub" class="section-sub-heading section-sub-heading-only">You can trust that we've done our homework and can handle your same day delivery needs</p>
             </div> 
             <div class="py-4 text-center" >
               <div class="container">
@@ -408,7 +408,7 @@
 
         <div class="text-center">
           <h1 class="section-heading">Our Features</h1>
-          <p class="section-sub-heading">Your job is now easier than ever because we've <br>built in all the necessary features into our online dashboard
+          <p class="section-sub-heading section-sub-heading-only">Your job is now easier than ever because we've built in all the necessary features into our online dashboard
 
           </p>
         </div>   
@@ -486,7 +486,7 @@
               <div class="container">
                 <div class="text-center">
                   <h1 class="section-heading">READY TO JOIN?</h1>
-                  <p class="section-sub-heading pb-5">If your pharmacy is ready to give it's customers<br> the same day delivery services they deserve, sign up now!
+                  <p class="section-sub-heading section-sub-heading-only pb-5">If your pharmacy is ready to give it's customers the same day delivery services they deserve, sign up now!
 
                   </p>
                 </div> 
@@ -604,7 +604,7 @@
                       QUESTIONS?</h1>
                     <p class="lead mb-5 section9-sub-heading pt-2">Contact with us to get a response
                       for all of your questions</p> 
-                      <img src="./Assets/Meditreks-logo.png" alt="Meditreks Logo" style="width: 70%;"> 
+                      <img src="./Assets/Meditreks-logo.png" alt="Meditreks Logo" style="width: 70%; padding-bottom: 25px;"> 
 
                      </div>
                 </div>
@@ -624,9 +624,9 @@
                         <textarea class="form-control form-message form-text-area" id="message" rows="1" placeholder="Your message here"></textarea>
                        </div>
                         <p id="missing-fields-error" class="bold text-danger" style="display: none">Please fill out all of the fields</p>
-            <p id="email-invalid-error" class="bold text-danger" style="display: none">Please provide a valid email address</p>
-            <p id="form-submitted" class="bold text-secondary" style="display: none">Thank you. Your message has been submitted.</p>
-            <p id="form-submission-failure" class="bold text-danger" style="display: none">Something went wrong when attempting to submit the message. Please refresh the page and try again.</p>
+                        <p id="email-invalid-error" class="bold text-danger" style="display: none">Please provide a valid email address</p>
+                        <p id="form-submitted" class="bold text-secondary" style="display: none">Thank you. Your message has been submitted.</p>
+                        <p id="form-submission-failure" class="bold text-danger" style="display: none">Something went wrong when attempting to submit the message. Please refresh the page and try again.</p>
                        <button type="submit" id="sendText" class="btn mt-md-5 submit-btn">Send A message</button> 
                       </form>
                   </div>
