text edit padding3

--- a/Meditreks.html
+++ b/Meditreks.html
@@ -134,8 +134,8 @@
                   <div class="carousel-item">
                         <img src="./Assets/Audi-2.jpg" class="d-block w-100 h-0" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                          <h1 class="section3-heading text-left">Auditability</h1>     
-                          <p class="section3-sub-heading">We keep records of everything! You don't have to worry about keeping anything in paper again! Your delivery information is always available online"</p> 
+                          <h1 class="section3-heading text-left" style="padding-bottom: 25px;">Auditability</h1>     
+                          <p class="section3-sub-heading">"We keep records of everything! Your delivery information is always available online"</p> 
                         </div>                      
                   </div>                    
                       
