--- a/Meditreks.html
+++ b/Meditreks.html
@@ -28,7 +28,8 @@
       <div class="main-cover-wrapper">
 
         <nav class="navbar navbar-expand-lg nav-class">
-          <img class="navbar-brand navbar-brand-left mr-auto" src="./Assets/Meditreks-logo.png" href="#">
+          <img class="navbar-brand-arrow-top" src="./Assets/Logo-arrow-blue.png" href="#">
+          <img class="navbar-brand navbar-brand-left mr-auto" src="./Assets/Main-Logo.png" href="#">
           <button id= "toggler" class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent, #sec1-container" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="" role="button" ><i class="fa fa-bars" aria-hidden="true" style="color:white"></i></span>
         </button>
@@ -61,7 +62,7 @@
             <div class="row" >
               <div class="col-md-12 col-12 align-self-center justify-content-center">
                 <p id="right-main-text">
-                  MEET YOUR CUSTOMER DEMANDS FOR SAME DAY PHARMACY DELIVERY
+                  MEET YOUR <span style="color: #74aedb; text-shadow: rgba(0, 0, 0, 0.616) 1px 0 10px;">CUSTOMER</span> DEMANDS FOR SAME DAY <span style="color: #74aedb; text-shadow: rgba(0, 0, 0, 0.616) 1px 0 10px;">PHARMACY</span> DELIVERY
                 </p>
               </div>
                              
@@ -593,12 +594,16 @@
                 <div class="container pt-md-5">
                 <div class="row pt-md-5">
                   <div class="col-md-8 mx-auto"> 
-                    <img src="./Assets/send-pic.png" width="75" class="pb-5">
+                    <img src="./Assets/send.png" width="75" class="pb-5">
                     <h1 class="display-3 mb-3 section9-heading">HAVE ANY <br>
                       QUESTIONS?</h1>
                     <p class="lead mb-5 section9-sub-heading pt-2">Contact with us to get a response
                       for all of your questions</p> 
-                      <img src="./Assets/Meditreks-logo.png" alt="Meditreks Logo" style="width: 70%; padding-bottom: 25px;"> 
+                      <div>
+                        <img class="navbar-brand-arrow" src="./Assets/Logo-arrow-blue.png" href="#">
+                        <img src="./Assets/Main-Logo.png" alt="Meditreks Logo" style="width: 70%; padding-bottom: 25px;"> 
+
+                      </div>
 
                      </div>
                 </div>
