--- a/Meditreks.html
+++ b/Meditreks.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+  <link rel="shortcut icon" href="./Assets/Logo-arrow-blue.png" type="image">  
 
     <link rel="stylesheet" href="Meditreks.css" type="text/css" />
     <link rel="stylesheet" href="Pricing_tab.css" type="text/css" />
