--- a/Meditreks.html
+++ b/Meditreks.html
@@ -32,8 +32,8 @@
     <div class="main-cover-wrapper">
 
       <nav class="navbar navbar-expand-lg nav-class">
-        <img class="navbar-brand-arrow-top" src="./Assets/Logo-arrow-blue.png" href="#">
-        <img class="navbar-brand navbar-brand-left mr-auto" src="./Assets/Main-Logo.png" href="#">
+        <img class="navbar-brand-arrow-top" src="./assets/Logo-arrow-blue.png" href="#">
+        <img class="navbar-brand navbar-brand-left mr-auto" src="./assets/Main-logo.svg" href="#">
         <button id="toggler" class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent, #sec1-container" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
@@ -42,39 +42,42 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
-            <!-- <li class="nav-item active">
+            <li class="nav-item active">
                 <a class="nav-link menu-item" href="#">Home <span class="sr-only">(current)</span></a>
-              </li> -->
+              </li>
             <li class="nav-item">
               <a class="nav-link menu-item" href="#section4">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu-item" href="#section7">Features</a>
+              <a class="nav-link menu-item" href="#section7-redo">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link menu-item" href="#section8">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link menu-item"
+              <a class="btn signup-nav"
                 href="https://docs.google.com/forms/d/e/1FAIpQLSdrK2iNGs7-PZTIZoLVOsKVbDun1UxvWkzDD7pzessdm-1b1g/viewform?fbzx=7209146676382562766"
                 target="_blank">Drive with Us</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <button href="#" class="btn signup-nav">SIGN UP</button>
-            </li>
+            </li> -->
 
         </div>
       </nav>
 
       <div id="sec1-container" class="container collapse show">
         <div class="row">
-          <div class="col-md-12 col-12 align-self-center justify-content-center">
+          <div class="col-md-12 col-12 text-center align-self-center justify-content-center">
             <p id="right-main-text">
               MEET YOUR <span style="color: #74aedb; text-shadow: rgba(0, 0, 0, 0.616) 1px 0 10px;">CUSTOMER</span>
               DEMANDS FOR SAME DAY <span
                 style="color: #74aedb; text-shadow: rgba(0, 0, 0, 0.616) 1px 0 10px;">PHARMACY</span> DELIVERY
             </p>
-          </div>
+
+            <!-- <a class="btn started-btn" href="https://app.cabtreks.com/login" target="_blank">GET
+              STARTED</a>
+          </div> -->
 
         </div>
       </div>
@@ -139,7 +142,7 @@
         <div class="carousel-item">
           <img src="./Assets/Meditation-1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h1 class="section3-heading text-left">Stress Free</h1>
+            <h1 class="section3-heading text-left">Stress-Free</h1>
             <p class="section3-sub-heading">"No more phone calls! Manage and track everything from your online
               dashboard"</p>
           </div>
@@ -190,7 +193,7 @@
         <div class="carousel-item">
           <img src="./Assets/Meditation-1.jpg" class="d-block w-100" alt="...">
           <div class="carousel-caption">
-            <h2 class="section3-mobile-heading">Stress Free</h2>
+            <h2 class="section3-mobile-heading">Stress-Free</h2>
             <p class="section3-mobile-subheading">No more phone calls! Manage and track everything from your online
               dashboard. We included it all!</p>
           </div>
@@ -238,7 +241,7 @@
                 <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-right">
                 <h1 class="section4-heading">SUPPORT</h1>
                 <p class="section-sub-heading">We're always available to help you get the support you need with the
-                  method you choose. Email, chat or call!</p>
+                  method you choose. Email, chat, or call!</p>
               </div>
             </div>
           </div>
@@ -248,7 +251,7 @@
               <div class="card-body p-4">
                 <img class="img-fluid d-block mb-3 mx-auto rounded-circle card-img-middle">
                 <h1 class="section4-heading">SAVINGS</h1>
-                <p class="section-sub-heading">Algorithmitic sorting and a blended driver supply mean the absolute lower
+                <p class="section-sub-heading">Algorithmic sorting and a blended driver supply mean the absolute lower
                   cost for you!</p>
               </div>
             </div>
@@ -264,7 +267,7 @@
     <div class="text-center">
       <h1 class="section-heading">WHAT OUR CLIENTS SAY?</h1>
       <p id="sec5-main-sub" class="section-sub-heading section-sub-heading-only">You can trust that we've done our
-        homework and can handle your same day delivery needs</p>
+        homework and can handle your same-day delivery needs</p>
     </div>
     <div class="py-4 text-center">
       <div class="container">
@@ -289,7 +292,7 @@
               <div class="card-body p-4">
 
                 <div class="sec5-headers">
-                  <h1 class="section5-heading">50000</h1>
+                  <h1 class="section5-heading">70000</h1>
                   <h1 class="sec5-plus">+</h1>
 
                 </div>
@@ -529,7 +532,7 @@
         <div class="text-center">
           <h1 class="section-heading">READY TO JOIN?</h1>
           <p class="section-sub-heading section-sub-heading-only pb-5">If your pharmacy is ready to give its customers
-            the same day delivery services they deserve, sign up now!
+            the same-day delivery services they deserve, sign up now!
 
           </p>
         </div>
@@ -650,13 +653,11 @@
             <div class="row pt-md-5">
               <div class="col-md-8 mx-auto">
                 <img src="./Assets/send.png" width="75" class="pb-5">
-                <h1 class="display-3 mb-3 section9-heading">HAVE ANY <br>
+                <h1 class="display-3 mb-5 section9-heading">HAVE ANY <br>
                   QUESTIONS?</h1>
-                <p class="lead mb-5 section9-sub-heading pt-2">Contact with us to get a response
-                  for all of your questions</p>
                 <div>
                   <img class="navbar-brand-arrow" src="./Assets/Logo-arrow-blue.png" href="#">
-                  <img src="./Assets/Main-Logo.png" alt="Meditreks Logo" style="width: 70%; padding-bottom: 25px;">
+                  <img src="./Assets/Main-logo.svg" alt="Meditreks Logo" style="width: 70%; padding-bottom: 25px;">
 
                 </div>
 
@@ -698,7 +699,7 @@
 
   </section>
 
-  <a class="btn fixed-btn" href="https://app.cabtreks.com/login" target="_blank"><i class="fa fa-pencil mr-3"></i>GET
+  <a class="btn fixed-btn" href="https://app.cabtreks.com/login" target="_blank"><i class="fa fa-sign-in mr-3"></i>GET
     STARTED</a>
 
   <script src="Meditreks.js"></script>
