--- a/Meditreks.html
+++ b/Meditreks.html
@@ -32,8 +32,8 @@
     <div class="main-cover-wrapper">
 
       <nav class="navbar navbar-expand-lg nav-class">
-        <img class="navbar-brand-arrow-top" src="./assets/Logo-arrow-blue.png" href="#">
-        <img class="navbar-brand navbar-brand-left mr-auto" src="./assets/Main-logo.svg" href="#">
+        <img class="navbar-brand-arrow-top" src="./Assets/Logo-arrow-blue.png" href="#">
+        <img class="navbar-brand navbar-brand-left mr-auto" src="./Assets/Main-logo.svg" href="#">
         <button id="toggler" class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent, #sec1-container" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
